--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <dependency>
             <groupId>org.mindrot</groupId>
             <artifactId>jbcrypt</artifactId>
-            <version>0.4</version> <!-- Check for the latest version -->
+            <version>0.4</version> 
         </dependency>
         
         <dependency>
